--- a/digibank/index.html
+++ b/digibank/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8" />
 
+  <link rel="stylesheet" href="./src/assets/styles/main.css">
   <link rel="icon" type="image/png" href="/src/assets/fav_icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
