--- a/digibank/index.html
+++ b/digibank/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <link rel="stylesheet" href="./src/assets/styles/main.css">
+  <link rel="stylesheet" href="./node_modules/react-toastify/dist/ReactToastify.css">
   
   <link rel="icon" type="image/png" href="/src/assets/fav_icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
