--- a/digibank/index.html
+++ b/digibank/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./src/assets/styles/main.css">
   <link rel="stylesheet" href="./node_modules/react-toastify/dist/ReactToastify.css">
-  
+  <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick.css">
+  <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick-theme.css">
+
   <link rel="icon" type="image/png" href="/src/assets/fav_icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
